vs.yml
kind: DestinationRule
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: reviews
  labels:
    kiali_wizard: traffic_shifting
  annotations: ~
spec:
  host: reviews.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
  trafficPolicy: ~

---

kind: VirtualService
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: reviews
  labels:
    kiali_wizard: traffic_shifting
spec:
  http:
  - route:
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v1
      weight: 19
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v2
      weight: 18
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v3
      weight: 63
  hosts:
  - reviews.default.svc.cluster.local
  gateways: ~
